css - spacing fixes

--- a/client/app/states/marketplace/list/_list.sass
+++ b/client/app/states/marketplace/list/_list.sass
@@ -3,4 +3,4 @@
   padding-top: 20px
   overflow-y: auto
   overflow-x: hidden
-  height: calc(100vh - 148px)
+  height: calc(100vh - 150px)
