--- a/client/assets/sass/_list-view.sass
+++ b/client/assets/sass/_list-view.sass
@@ -1,7 +1,7 @@
 .list-view-container
   overflow-y: auto
   overflow-x: hidden
-  height: calc(100vh - 149px)
+  height: calc(100vh - 150px)
   background: $app-color-white
   margin-top: 1px
 
@@ -34,6 +34,7 @@
       color: #333
       position: relative
       top: 2px
+      width: 26px
 
   .list-view-pf-main-info
     padding: 0
